src/choropleth/styles.css
/* Copyright © 2020 Scott Orlyck. **/

@import url('https://fonts.googleapis.com/css2?family=Recursive:wght,CRSV@500,0&display=swap');

:root {
    --purp: rgb(139, 100, 174);
    --red: rgb(213, 27, 106);
}

.heading {
    @apply text-5xl
}

#dateLabel {
    @apply mt-2 text-center heading
}

#totalLabel {
    color: var(--purp);
    @apply inline-block mb-4 text-left heading
}

#newCases {
    color: var(--purp);
    @apply inline-block mb-4 text-left ml-4 heading
}

#deathLabel {
    color: var(--red);
    @apply inline-block mb-4 text-left heading
}

#newDeaths {
    color: var(--red);
    @apply inline-block mb-4 text-left ml-4 heading
}

#deathSwitch {
    background-color: var(--red)
}

#caseSwitch {
    background-color: var(--purp);
}

.circle {
    @apply cursor-pointer
}

.axis {
    @apply text-base
}

.calAxis {
    @apply text-sm
}

@media (prefers-color-scheme: dark) {
    .circle {
        fill: #f7fafc;
    }

    .legendLabel {
        fill: #f7fafc;
    }

    .button {
        @apply text-gray-100;
    }

    html {
        @apply bg-gray-900 text-gray-300
    }
}

.switches {
    width: 244px;
    @apply py-2 px-4 rounded border-none mb-6 text-white opacity-25 mx-auto
}

.switches:hover {
    @apply cursor-pointer
}

.selected {
    opacity: 1;
}

.legend {
    max-width: 240px;
    @apply overflow-visible
}

#legends {
    max-width: 270px;
    @apply flex flex-col ml-8
}

.legendLabel {
    @apply text-gray-100 text-base
}

.control {
    @apply p-1
}

.label {
    @apply p-1 mx-4
}

#controls {
    @apply overflow-visible mx-auto cursor-pointer
}

.calendarLabel {
    @apply ml-6
}

.cal {
    @apply mx-6 overflow-visible
}

.calendar {
    @apply w-full overflow-visible
}

#calendarContainer {
    @apply flex flex-col
}

#slider {
    @apply overflow-visible mx-16 w-full 
}

.button {
    font-family: 'Recursive', monospace;
    width: 100px;
    height: 44px;
    @apply bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow text-lg
}
  
#mapContainer {
    @apply w-full
}

#playback {
    @apply w-full max-w-screen-xl mx-auto
}

#playContainer {
    @apply flex flex-col justify-center
}


.counter {
    @apply flex flex-col ml-1
}

#map {
    max-width: 1800px;
    @apply flex flex-col items-start w-full mx-auto
}

#mapSvg {
    @apply w-full
}

#title {
    @apply my-4 heading
}

#popup {
    @apply px-4 py-2 bg-gray-900 opacity-0 text-gray-100 inline-block absolute rounded
}

#popupLabel {
    @apply p-1
}

@screen md {
    #controls {
        @apply flex overflow-visible w-full
    }
    #calendarContainer {
        @apply flex-row
    }
}

@screen sm {
    #map {
      @apply flex-row
    }
}

